--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -225,7 +225,7 @@ a {
 
 /******************** Client ********************/
 .client {
-  width: calc(100% - 54px);
+  max-width: calc(100% - 54px);
   margin-top: 60px;
   margin-right: auto;
   margin-left: auto;
@@ -292,6 +292,9 @@ a {
 /* Service group */
 .service-group {
   margin-top: 50px;
+}
+
+.service-group .row {
   translate: 0;
 }
 
@@ -469,7 +472,9 @@ a {
 .stat {
   margin: 60px auto 0;
   padding-top: 60px;
-  width: calc(100% - 40px);
+  max-width: calc(100% - 40px);
+  position: relative;
+  z-index: 1;
 }
 
 .stat__header {
@@ -591,7 +596,88 @@ a {
 
 /******************** Feedback ********************/
 .feedback {
-  height: 400px;
   margin-top: -108px;
+  padding: 229px 0 67px;
   background-color: #fbfaff;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.feedback__desc,
+.feedback-item__content {
+  text-align: center;
+  max-width: 351px;
+  margin: 0 auto;
+}
+
+.feedback__desc {
+  margin-top: 20px;
+}
+
+/* Feedback group */
+.feedback-group {
+  margin-top: 40px;
+}
+
+.feedback-group .row {
+  translate: 0;
+}
+
+.feedback-item__content {
+  color: #51586a;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.66;
+}
+
+.feedback-item__info {
+  margin-top: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 15px;
+}
+
+.feedback-item__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #f29764;
+  border: 2px solid #fff;
+  object-fit: cover;
+  object-position: top;
+}
+
+.feedback-item__name {
+  color: #080415;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.66;
+}
+
+.feedback-item__desc {
+  margin-top: 3px;
+  text-align: center;
+}
+
+.feedback .active-group {
+  margin-top: 20px;
+}
+
+/* Feedback decor */
+.feedback-decor--left,
+.feedback-decor--right {
+  position: absolute;
+  bottom: 0;
+}
+
+.feedback-decor--left {
+  left: 0;
+}
+
+.feedback-decor--right {
+  right: 0;
 }
