--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -771,6 +771,7 @@ main > .container {
   padding: 0 10px 15px;
   margin: 0 -10px;
   border-bottom: 2px solid #08182f;
+  transition: border 0.5s ease;
 }
 
 .faq-item__content {
