Add responsive for Stat part on tablet

--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -71,6 +71,12 @@
   .project-group {
     max-width: 100%;
   }
+
+  /* Stat */
+  .stat__desc {
+    width: 400px;
+    margin: 20px auto 0;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
