--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -621,6 +621,7 @@ main > .container {
 .stat-video__thumb {
   width: 100%;
   height: 276px;
+  opacity: 0.8;
   object-fit: cover;
   object-position: -50px -1px;
 }
@@ -643,6 +644,7 @@ main > .container {
   background-color: #fff;
   border: none;
   outline: none;
+  opacity: 0.9;
 
   /* Center the play button */
   display: flex;
