--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -375,10 +375,14 @@ main > .container {
 
 .client-group--large {
   margin-top: 40px;
-
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
-  flex-wrap: wrap;
+}
+
+.client-group--small {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .client-group--small:nth-child(3),
@@ -387,8 +391,13 @@ main > .container {
   margin-top: 30px;
 }
 
+.client-group--small:nth-child(2),
+.client-group--small:nth-child(4) {
+  justify-items: center;
+}
+
 .client-item {
-  display: block;
+  max-width: 100%;
 }
 
 /* Service */
@@ -887,6 +896,7 @@ main > .container {
   height: 503px;
   object-fit: cover;
   display: block;
+  margin: 0 auto;
 }
 
 /******************** Contact ********************/
