--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -498,4 +498,35 @@
   .feedback .active-group {
     margin-top: 40px;
   }
+
+  /* FAQ */
+  .faq {
+    margin-top: 35px;
+  }
+
+  .faq__heading {
+    max-width: 575px;
+  }
+
+  .faq-group {
+    margin-top: 80px;
+  }
+
+  .faq-item {
+    padding: 21px 0 21px 21px;
+    align-items: center;
+  }
+
+  .faq-item__question {
+    font-size: 3.2rem;
+  }
+
+  .faq-item__answer {
+    margin-top: 23px;
+  }
+
+  [type="radio"]:checked ~ .faq-item__answer {
+    height: 55px;
+    max-width: 700px;
+  }
 }
