--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -529,4 +529,28 @@
     height: 55px;
     max-width: 700px;
   }
+
+  /* Mood */
+  .mood {
+    margin-top: 100px;
+    padding-bottom: 80px;
+  }
+
+  .mood__desc {
+    max-width: 528px;
+  }
+
+  .mood__link {
+    margin-top: 30px;
+    font-size: 3.2rem;
+  }
+
+  .mood__img-group {
+    margin-top: 70px;
+  }
+
+  .mood__img {
+    width: 370px;
+    height: 529px;
+  }
 }
