--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -339,6 +339,24 @@ main > .container {
   transition: border 0.1s, background-color 0.1s ease;
 }
 
+.social__icon {
+  color: rgba(8, 4, 21, 1);
+  transition: color 0.1s ease;
+}
+
+/* Social icon hover */
+.social__circle-group .circle:hover {
+  border: none;
+}
+
+.social-group .circle:nth-child(1):hover {
+  background-color: #0056ff;
+}
+
+.social-group .circle:nth-child(2):hover {
+  background-color: #ffabe7;
+}
+
 .social__circle-group .circle:nth-child(3)::before {
   content: "";
   position: absolute;
@@ -358,24 +376,6 @@ main > .container {
   opacity: 0;
   z-index: -1;
   transition: opacity 0.1s ease;
-}
-
-.social__icon {
-  color: rgba(8, 4, 21, 1);
-  transition: color 0.1s ease;
-}
-
-/* Social icon hover */
-.social__circle-group .circle:hover {
-  border: none;
-}
-
-.social-group .circle:first-child:hover {
-  background-color: #0056ff;
-}
-
-.social-group .circle:nth-child(2):hover {
-  background-color: #ffabe7;
 }
 
 .social__circle-group .circle:nth-child(3):hover::before {
@@ -571,12 +571,17 @@ main > .container {
   align-items: center;
   position: relative;
   overflow: hidden;
+  transition: box-shadow 0.25s ease;
 }
 
 .projet-item__content,
 .project-item__img {
   position: relative;
   z-index: 1;
+}
+
+.project-item__img {
+  transition: scale 0.25s ease;
 }
 
 .projet-item__content {
@@ -614,12 +619,30 @@ main > .container {
   z-index: 0;
 }
 
+/* Project item hover */
+.project-item:hover {
+  position: relative;
+  box-shadow: -5px 2px 55px -6px rgba(0, 0, 0, 0.61);
+}
+
+.project-item:hover .project-item__img {
+  scale: 1.05;
+}
+
 .project__btn {
   --height: 56px;
   color: #080415;
   background-color: #fff;
   margin-top: 50px;
   min-width: 154px;
+  transition: 0.25s;
+}
+
+.project__btn:hover {
+  background-color: #fff;
+  color: #080415;
+  opacity: 1;
+  font-size: 125%;
 }
 
 /* Stat */
